# wildr-app

./: .eslintrc.js  .gitignore  .prettierrc.js  .tool-versions  BUILD  CODEOWNERS  README.md  WORKSPACE  codemagic.yaml  deps.bzl  docker-compose.dev.yml  go.mod  go.sum
ai-server/: .tool-versions  Dockerfile  README.md  ai-server-build-push-image.sh  pyproject.toml
ai-server/app/: main.py
ai-server/app/recommender/: post_embedding.py  post_features.py  user_embedding.py  user_features.py
deployment/: .gitignore  (+10 more)
genesis/cmd/generate_models/: BUILD.bazel  main.go
genesis/cmd/genesis/: BUILD.bazel  main.go
genesis/cmd/migrate_down/: BUILD.bazel  main.go
genesis/cmd/migrate_up/: BUILD.bazel  main.go
genesis/pkg/cache/: BUILD.bazel  cache.config.go  cache.module.go
genesis/pkg/cache/compressor/: BUILD.bazel  compressor.go  snappy.go
genesis/pkg/cache/marshaller/: BUILD.bazel  marshaller.go  proto.go
genesis/pkg/cache/redis/: BUILD.bazel  client.go  client_test.go  options.go  redis.config.go  redis.go  redis_test.go
genesis/pkg/cache/redis/telemetry/logger/: BUILD.bazel
genesis/pkg/cache/redis/telemetry/metrics/: BUILD.bazel  metrics.go
genesis/pkg/cache/redis/telemetry/tracer/: BUILD.bazel  tracer.go
genesis/pkg/cache/ristretto/: BUILD.bazel  ristretto.config.go  ristretto.go  ristretto_test.go
genesis/pkg/cache/ristretto/telemetry/metrics/: BUILD.bazel  metrics.go
genesis/pkg/cmd/: BUILD.bazel  cmd.config.go  cmd.go  cmd_test.go  config_test.go  env.go  file.go  input.go
genesis/pkg/cmd/testdata/: invalid.config.yml
genesis/pkg/debug/: BUILD.bazel  debug.go  debug_test.go  mux.go  psutil.go
genesis/pkg/errors/: BUILD.bazel  errors.go
genesis/pkg/errors/errortypes/: BUILD.bazel  errortypes.go
genesis/pkg/health/: BUILD.bazel  health.config.go  health.module.go  server.go
genesis/pkg/health/checker/: BUILD.bazel  redis_checker.go
genesis/pkg/health/observer/: BUILD.bazel  grpc_observer.go  health_observer.go  health_observer.module.go  liveliness_observer.go  readiness_observer.go
genesis/pkg/health/registrations/: BUILD.bazel  registrations.config.go  registrations.go  registrations.module.go
genesis/pkg/health/transport/grpc/: BUILD.bazel  grpc.go  grpc_health_server.go  grpc_test.go
genesis/pkg/health/transport/http/: BUILD.bazel  http.go  http_observer.go  http_test.go
genesis/pkg/limiter/: BUILD.bazel
genesis/pkg/marshaller/: BUILD.bazel  factory.go  marshaller.go  toml_test.go  yaml_test.go
genesis/pkg/os/: BUILD.bazel  env.go  env_test.go  path.go
genesis/pkg/runtime/: BUILD.bazel  procs.go
genesis/pkg/telemetry/: BUILD.bazel  telemetry.config.go  telemetry.module.go
genesis/pkg/telemetry/logger/: BUILD.bazel  logger.module.go
genesis/pkg/telemetry/logger/zap/: BUILD.bazel  zap.config.go  zap.go  zap_test.go
genesis/pkg/telemetry/metrics/: BUILD.bazel  metrics.go  metrics_test.go
genesis/pkg/telemetry/tracer/: BUILD.bazel  tracer.config.go  tracer.go
genesis/pkg/transport/: BUILD.bazel  transport.config.go  transport.go  transport.module.go
genesis/pkg/transport/grpc/: BUILD.bazel  client.go  grpc.config.go  grpc_test.go  server.go
genesis/pkg/transport/grpc/breaker/: BUILD.bazel  breaker.go
genesis/pkg/transport/grpc/limiter/: BUILD.bazel  limiter.go
genesis/pkg/transport/grpc/meta/: BUILD.bazel  meta.go
genesis/pkg/transport/grpc/retry/: BUILD.bazel  config.go
genesis/pkg/transport/grpc/security/token/: BUILD.bazel  token.go
genesis/pkg/transport/grpc/telemetry/metrics/: BUILD.bazel  metrics.go
genesis/pkg/transport/grpc/telemetry/tracer/: BUILD.bazel  meta.go  tracer.go
genesis/pkg/transport/http/: BUILD.bazel  client.go  http.config.go  http_test.go  server.go
genesis/pkg/transport/http/breaker/: BUILD.bazel
genesis/pkg/transport/http/cors/: BUILD.bazel
genesis/pkg/transport/http/limiter/: BUILD.bazel  limiter.go
genesis/pkg/transport/http/meta/: BUILD.bazel  meta.go
genesis/pkg/transport/http/retry/: BUILD.bazel
genesis/pkg/transport/http/security/token/: BUILD.bazel  token.go
genesis/pkg/transport/meta/: BUILD.bazel  meta.go
genesis/pkg/transport/strings/: BUILD.bazel
genesis/pkg/validator/: BUILD.bazel  validator.go  validator.module.go  validator_test.go
genesis/test/: BUILD.bazel  cache.go  client.go  compressor.go  env.go  logger.go  marshaller.go  meta.go  server.go  status_server.go  test.config.go  token.go  version.go
genesis/test/annotations/: BUILD.bazel
genesis/test/greet/v1/: BUILD.bazel  service.pb.go  service.pb.gw.go  service_grpc.pb.go
teller/cmd/generate_models/: BUILD.bazel  main.go
teller/cmd/migrate_down/: BUILD.bazel  main.go
teller/cmd/migrate_up/: BUILD.bazel  main.go
teller/cmd/teller/: BUILD.bazel  main.go  main_test.go
teller/pkg/app/: BUILD.bazel  app.module.go
teller/pkg/config/: BUILD.bazel  config_test.go
teller/pkg/exchangerate/: BUILD.bazel  errors.go  exchangerate.service.go  exchangerate.service_test.go  module.go
teller/pkg/teller/: BUILD.bazel  module.go  teller.server.go  teller.server_test.go
teller/pkg/wallet/: BUILD.bazel  wallet.module.go
teller/pkg/wallet/walletentity/: BUILD.bazel  wallet.entity.go  wallet.entity_test.go
teller/pkg/wallet/walletentity/walletregion/: BUILD.bazel  walletregion.go
teller/pkg/wallet/walletentity/walletstatus/: BUILD.bazel  walletstatus.go
teller/pkg/wallet/walletentity/wallettype/: BUILD.bazel  wallettype.go
teller/pkg/wallet/walletmarshaller/: BUILD.bazel  errors.go  walletmarshaller.go  walletmarshaller_test.go
teller/pkg/wallet/walletrepo/: BUILD.bazel  errors.go  wallet.repo.go  wallet.repo_test.go
teller/pkg/wallet/walletservice/: BUILD.bazel  wallet.service.go  wallet.service_test.go
teller/proto/teller/: BUILD.bazel  teller.pb.go  teller.proto
troll-server/: .dockerignore  .ycm_extra_conf.py  Dockerfile  README.md  dev-build-image.sh  docker-entrypoint.sh  linux-dev-build-image.sh  logging.ini  prod-build-image.sh  pull-image.sh  pyproject.toml  text_pre_process.py
troll-server/tests/: test_troll_scorer.py
troll-server/troll_scorer/: server.py
(+2507 files in other folders)
