[tool.poetry]
name = "ai-server"
version = "0.1.0"
description = ""
authors = ["thudson-wildr"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.7"
gensim = "^4.3.1"
nltk = "^3.8.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
datetime = "^5.1"
boto3 = "^1.26.151"
pyarrow = "^12.0.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.97.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
