load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generate_models_lib",
    srcs = ["main.go"],
    data = [
        "//genesis/config:genesis_config",
    ],
    importpath = "github.com/wildr-inc/app/genesis/cmd/generate_models",
    visibility = ["//visibility:public"],
    deps = [
        "//genesis/pkg/cmd",
        "//genesis/pkg/config",
        "//genesis/pkg/database/sql/model_generator",
        "//genesis/pkg/telemetry/logger",
        "@org_uber_go_fx//:fx",
    ],
)

go_binary(
    name = "generate_models",
    data = [
        "//genesis/config:genesis_config",
    ],
    embed = [":generate_models_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.CONFIG_FILE": "./genesis/config/config.yml",
    },
)
