load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "genesis",
    embed = [":genesis_lib"],
    importpath = "github.com/wildr-inc/app/genesis/src",
    visibility = ["//visibility:public"],
)

go_library(
    name = "genesis_lib",
    srcs = ["main.go"],
    data = [
        "//genesis/config:genesis_config",
    ],
    importpath = "github.com/wildr-inc/app/genesis/cmd/genesis",
    visibility = ["//visibility:private"],
    deps = [
        "//genesis/pkg/cmd",
        "//genesis/pkg/config",
        "//genesis/pkg/debug",
        "//genesis/pkg/health",
        "//genesis/pkg/runtime",
        "//genesis/pkg/telemetry/logger",
        "//genesis/pkg/telemetry/metrics",
        "//genesis/pkg/transport",
        "//genesis/pkg/transport/grpc",
        "//genesis/pkg/transport/http",
        "@org_uber_go_fx//:fx",
    ],
)
