load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "cmd.config.go",
        "cmd.go",
        "cmd.module.go",
        "env.go",
        "file.go",
        "input.go",
    ],
    importpath = "github.com/wildr-inc/app/genesis/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//genesis/pkg/file",
        "//genesis/pkg/marshaller",
        "//genesis/pkg/os",
        "//genesis/pkg/time",
        "@com_github_spf13_cobra//:cobra",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "cmd_test",
    srcs = [
        "cmd_test.go",
        "config_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        ":cmd",
        "//genesis/pkg/cache",
        "//genesis/pkg/config",
        "//genesis/pkg/database/sql",
        "//genesis/pkg/health",
        "//genesis/pkg/runtime",
        "//genesis/pkg/telemetry",
        "//genesis/pkg/telemetry/metrics",
        "//genesis/pkg/transport",
        "//genesis/pkg/transport/grpc",
        "//genesis/pkg/transport/http",
        "//genesis/test",
        "@com_github_smartystreets_goconvey//convey",
        "@org_uber_go_fx//:fx",
    ],
)
