load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "health",
    srcs = [
        "health.config.go",
        "health.module.go",
        "server.go",
    ],
    importpath = "github.com/wildr-inc/app/genesis/pkg/health",
    visibility = ["//visibility:public"],
    deps = [
        "//genesis/pkg/health/observer",
        "//genesis/pkg/health/registrations",
        "//genesis/pkg/health/transport/grpc",
        "//genesis/pkg/health/transport/http",
        "@com_github_alexfalkowski_go_health//server",
        "@org_uber_go_fx//:fx",
    ],
)
