load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "limiter",
    srcs = ["limiter.go"],
    importpath = "github.com/wildr-inc/app/genesis/pkg/limiter",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ulule_limiter_v3//:limiter",
        "@com_github_ulule_limiter_v3//drivers/store/memory",
    ],
)
