load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "migrate_down_lib",
    srcs = ["main.go"],
    importpath = "github.com/wildr-inc/app/teller/cmd/migrate_down",
    visibility = ["//visibility:private"],
    deps = [
        "//genesis/pkg/cmd",
        "//genesis/pkg/database/sql/migrator",
        "//genesis/pkg/telemetry/logger",
        "//teller/pkg/config",
        "@org_uber_go_fx//:fx",
    ],
)

go_binary(
    name = "migrate_down",
    data = [
        "//teller/config:teller_config",
        "//teller/database/migrations:migration_files",
    ],
    embed = [":migrate_down_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.CONFIG_FILE": "./teller/config/config.yml",
    },
)

go_binary(
    name = "migrate_down_test",
    data = [
        "//teller/config:teller_config_test",
        "//teller/database/migrations:migration_files",
    ],
    embed = [":migrate_down_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.CONFIG_FILE": "./teller/config/config_test.yml",
    },
)
