load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "migrate_up_lib",
    srcs = ["main.go"],
    data = [
        "//teller/config:teller_config",
    ],
    importpath = "github.com/wildr-inc/app/teller/cmd/migrate_up",
    visibility = ["//visibility:private"],
    deps = [
        "//genesis/pkg/cmd",
        "//genesis/pkg/database/sql/migrator",
        "//genesis/pkg/telemetry/logger",
        "//teller/pkg/config",
        "@org_uber_go_fx//:fx",
    ],
)

go_binary(
    name = "migrate_up",
    data = [
        "//teller/config:teller_config",
        "//teller/database/migrations:migration_files",
    ],
    embed = [":migrate_up_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.CONFIG_FILE": "./teller/config/config.yml",
    },
)

go_binary(
    name = "migrate_up_test",
    data = [
        "//teller/config:teller_config_test",
        "//teller/database/migrations:migration_files",
    ],
    embed = [":migrate_up_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.CONFIG_FILE": "./teller/config/config_test.yml",
    },
)
