load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "teller_proto",
    srcs = ["teller.proto"],
    visibility = ["//visibility:public"],
    deps = ["//teller/proto/wallet:wallet_proto"],
)

go_proto_library(
    name = "teller_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/wildr-inc/app/teller/proto/teller",
    proto = ":teller_proto",
    visibility = ["//visibility:public"],
    deps = ["//teller/proto/wallet"],
)

go_library(
    name = "teller",
    embed = [":teller_go_proto"],
    importpath = "github.com/wildr-inc/app/teller/proto/teller",
    visibility = ["//visibility:public"],
)
